tests/snapshots/test_runner__tests__compiler__typecheck__record_update_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// shorthand update
let a = { x: 2, y: {z: 3} }
let x = "hi"
let b = a.{ x }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_5.kk:4:13
  │
4 │ let b = a.{ x }
  │             ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
