tests/snapshots/test_runner__tests__compiler__typecheck__record_wildcard_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// No error
type People = {
  firstName: String,
  lastName: String
}

let s = (firstName: String, lastName: String): People => {...}

"Adam".s("James").print()

============
EXIT CODE
============
0

============
STDOUT
============
{ '$firstName': 'Adam', '$lastName': 'James' }

============
STDERR
============
