tests/snapshots/test_runner__tests__compiler__typecheck__recursive_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<Of> =
  Nil()
  Cons({current: Of next: List<Of Of>})

let list_map<From To> : | List<Of From> | From -> To -> List<Of To> =
  | Nil() _ => Nil()
  | Cons({current, next,}) f => Cons({
      current current.f()
      next Cons({current 0 next Nil()}).list_map(f)
  })

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/recursive_function_1.kk:9:26
  │
9 │       next Cons({current 0 next Nil()}).list_map(f)
  │                          ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - From        | + Integer   |
    +---------------+-------------+
