tests/snapshots/test_runner__tests__compiler__typecheck__shorthand_function_call_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = <T>(a: T, b: T): {a: T, b: T} => {a, b}

let match = <A, B>(a: A, f: (a: A) => B): B => a.f()

do "hello".match(.foo(2)).print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/shorthand_function_call_1.kk:5:23
  │
5 │ do "hello".match(.foo(2)).print()
  │                       ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
