tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (_: String): String => "Hello"

let foo = (_: Boolean): String => "World"

let main = (null: Null): Integer => {
  let f = x => x.foo();
  123
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/single_dispatch_2.kk:6:18
  │
6 │   let f = x => x.foo();
  │                  ^^^ Ambiguous Reference
  │
  = This function is overloaded with multiple signatures, but the first argument provided has unknown type.
    To disambiguate, annotate the type of the first argument of this function call with any of the following types:

      String

      Boolean
